task: deployment to google cloud (#43)
* task: deployment to google cloud

* task: deployment add astronomy and cronjob
